test/test_suite/errors/error_union.c3
module foo;

error Blurg;

func void main()
{
    error foo;
}